=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.0
 - Changed: Importing/exporting places to/from GoogleMap with level>4 (wooc)
 - Fixed: [ 1752892 ] Maps not working right (wooc)
 - Fixed: [ 1864790 ] Problems with places and place maps (wooc)
 - Fixed: [ 1912861 ] Googlemap place names are language dependant (wooc)
 - Fixed: [ 1912864 ] countries.csv inconsistent with countries.en.php (wooc)
 - [ 2514630 ] Install Wizard fails to complete. (fisharebest)
 - Changed: modified JWplayer files to work with new YouTube changes to embedded files (windmillway)
 - Changed: Further Improvements to Gerry's new handling of various media file types (windmillway)
 - [ 2494959 ] addSeperator() spelling (fisharebest)
 - Added: [ 2497934 ] Time since login (wooc)
 - Changed: Correct handling of various media file types (canajun2eh)
 - Changed: Correct handling of media files that are URLs (canajun2eh)
 - Changed: Patch [ 2486577 ] applied. Auto show of Notes in Lightbox window and in slide show. (windmillway) 
 - Fixed: [ 1864683 ] NOTE text is duplicated (SVN2450) (fisharebest)
 - Fixed: [ 2009275 ] privacy / is_dead calculations are improper (fisharebest)
 - Fixed: [ 2473228 ] update_isdead while Gedcom import (fisharebest)
 - Fixed: [ 2481665 ] SVN 4632 age comp error (fisharebest)
 - Fixed: [ 2495180 ] [4719] Typo in RA (erostew)
 - Fixed: Incorrect block heading format on Index and Portal pages when page language is RTL (canajun2eh)
 - Changed: Indi Navigator: Set 5 Tabs only: Facts/Notes/Sources/Media/Album pending config options. Removed on/off Toggle link (windmillway)
 - Fixed: [ 2485553 ] Googlemap page error. Also removed Navigator "Tab", replaced with link on right (more to be done on config) (windmillway)